--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "faunadb": "^4.4.1",
     "next": "12.0.3",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.4"
+    "react-icons": "^4.3.1",
+    "sass": "^1.43.4",
+    "stripe": "^8.186.1"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.34",
     "eslint": "7",
